syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "Transaction service";
		version: "1.0";
		contact: {
			name: "go-grpc-gateway";
			url: "https://github.com/caohoangnam/go-grpc-gateway";
			email: "caohoangnam114@gmail.com";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
    responses: {
		key: "404";
		value: {
			description: "Returned when the resource does not exist.";
			schema: {
				json_schema: {
					type: STRING;
				}
			}
		}
	}
};

message Transaction {
	int64 Id = 1;
	string FromAccountId = 2;
	string ToAccountId = 3;
	double Amount = 4;
	
	//Date and time to reminder
	google.protobuf.Timestamp CreatedAt = 5;
	google.protobuf.Timestamp UpdatedAt = 6;
}

message CreateTransactionRequest {
	string api = 1;

	//Task entity to add
	Transaction transaction = 2;
}

message CreateTransactionResponse {
	string api = 1;
	int64 id = 2;
}

message ReadTransactionRequest {
	string api = 1;
	int64 id = 2;
}

message ReadTransactionResponse {
	string api = 1;
	Transaction transaction = 2;
}

service TransactionService {
	rpc Create(CreateTransactionRequest) returns (CreateTransactionResponse){
		option (google.api.http) = {
			post: "/v1/transaction"
			body: "*"
		};
	};

	rpc Read(ReadTransactionRequest) returns (ReadTransactionResponse){
		option (google.api.http) = {
			get: "/v1/transaction/{id}"
		};
	};
}
